1.2.9 2016-07-08

- Update to use Plone 5.0.5 as default.
  [smcmahon]

- Make sure supervisord rereads config file and restarts memmon processes if the conf file
  changes.
  [smcmahon]

- Add Ubuntu Xenial to meta/main.yml
  [svx]

- Always include PYTHON_EGG_CACHE environment variable; simplify handling; update docs.
  Fixes #78.
  [smcmahon]

- Add support for Xenial Xerus (Ubuntu 16.04).
  [smcmahon]

- Drop shallow clone for Instance directory
  [gomez]

- Allow custom Python path
  [MrTango]

1.2.8 2016-04-25

- Include Products.PloneHotfix20160419.
  [smcmahon]

- Default to Plone 5.0.4.
  [smcmahon]

- Document several variables related to plone site creation. Fixes #74.
  [smcmahon]

1.2.7 2016-03-28

- Do our best to detect changes in files copied via plone_buildout_extra_dir. Fixes #70.
  [smcmahon]

- Add plone_install_zeoserver and plone_zeo_ip. Together, these make it possible to use the role for cluster configurations.
  [smcmahon]

- Eliminate needless stop of client1. This also makes the role work when plone_client_count is 0.
  [smcmahon]

- Make cronjob notifications via email more useful.
  [djowett]

- Add plone_rsync_backup_options to make backup more flexible.
  [djowett]

1.2.6 2016-03-12

- Run P4 tests with 4.3.8.
  [smcmahon]

- Document plone_buildout_extra_dir.
  [smcmahon]

- Add plone_restart_after_buildout option.
  [smcmahon]

- A nasty bug in expression evaluation in Ansible 1.9 makes us require Ansible 2.0+.
  [smcmahon]

- Add plone_always_run_buildout option. Mainly useful for CI situations.
  [smcmahon]

- Change strategy on mr.developer. No longer set git-clone-depth=1, as this destroyed ability to set revisions and branches. If you want a shallow clone, use "depth=1" in the source spec.
  [smcmahon]

- Add plone_extra_find_links option to enable download eggs from private servers.
  [jpgimenez]

- Relicense as BSD-3-Clause.

- Add missing instance_config for multi instance use
  [gomez]
