@@ -1,0 +1,3 @@
+# Used for Vagrant and CI testing
+[defaults]
+roles_path = ../
