@@ -1,5 +1,7 @@
 ---
 
+ansible_ssh_pipelining: true
+
 plone_version: '5.0.5'
 
 plone_major_version: "{{ plone_version|truncate(3, killwords=true, end='') }}"
