@@ -1,3 +1,10 @@
+Unreleased
+
+- Symbolic link to self for testing fouled up vagrant on platforms without client extensions.
+  Change strategy to use ansible.cfg specification for roles.
+  [smcmahon]
+
+
 1.2.9 2016-07-08
 
 - Update to use Plone 5.0.5 as default.
